--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -12,13 +12,17 @@ dlib==19.24.2
 drf-spectacular==0.26.5
 face-recognition==1.3.0
 face-recognition-models==0.3.0
+gunicorn==21.2.0
 idna==3.4
 inflection==0.5.1
 jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
 Markdown==3.5.1
 numpy==1.26.1
+packaging==23.2
 Pillow==10.1.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 PyJWT==2.8.0
 python-dotenv==1.0.0
 pytz==2023.3.post1
