Feat : Ingra refactor

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,7 +2,7 @@ FROM python
 MAINTAINER your_name "limjung99@g.hongik.ac.kr"
 RUN apt-get update -y
 RUN apt-get install -y pip
-COPY . /app
-WORKDIR /app
+COPY . /application
+WORKDIR /application
 RUN pip install -r requirements.txt
 CMD ["python","manage.py","runserver","0.0.0.0:8000"]
