--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -22,6 +22,9 @@ Markdown==3.5.1
 numpy==1.26.1
 packaging==23.2
 Pillow==10.1.0
+psycopg==3.1.12
+psycopg-binary==3.1.12
+psycopg-pool==3.2.0
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
@@ -32,5 +35,6 @@ referencing==0.30.2
 requests==2.31.0
 rpds-py==0.10.6
 sqlparse==0.4.4
+typing_extensions==4.8.0
 uritemplate==4.1.1
 urllib3==2.0.7
