--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ events{
     worker_connections 1024;
 }
 http{
-    upstream app_serveer{
+    upstream app_server{
         server backend:8000;
     }
 
@@ -13,7 +13,7 @@ http{
         server_name gachi.com;
 
         location / {
-            proxy_pass http://app_serveer;
+            proxy_pass http://app_server;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
