Feat : adding memo view

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,13 @@
 # nginx.conf
+
 worker_processes auto;
-events{
+
+events {
     worker_connections 1024;
 }
-http{
-    upstream app_server{
+
+http {
+    upstream app_server {
         server backend:8000;
     }
 
@@ -13,13 +16,11 @@ http{
         server_name gachi.com;
 
         location / {
-            proxy_pass http://app_server;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            return 308 $scheme://$server_name$request_uri;
         }
 
         location /static/ {
-            alias /app/static/; 
+            alias /app/static/;
         }
 
         location /media/ {
